@@ -24,6 +24,7 @@ namespace Marvel {
 	PyObject* get_active_window              (PyObject* self, PyObject* args, PyObject* kwargs);
 	
 	// main viewport
+	PyObject* set_main_window_pos            (PyObject* self, PyObject* args, PyObject* kwargs);
 	PyObject* set_main_window_title          (PyObject* self, PyObject* args, PyObject* kwargs);
 	PyObject* set_main_window_resizable      (PyObject* self, PyObject* args, PyObject* kwargs);
 	PyObject* get_main_window_size           (PyObject* self, PyObject* args, PyObject* kwargs);
